[v03] Refatorado em testes finais.